# fastapi-users

./: Pipfile  pyproject.toml  setup.py
docs/configuration/: full_example.md  oauth.md
docs/src/: db_sqlalchemy_asyncpg.py  full_sqlalchemy_asyncpg.py  oauth_full_sqlalchemy_asyncpg.py
fastapi_users/authentication/: base.py  cookie.py  jwt.py
fastapi_users/db/: __init__.py  sqlalchemy.py
fastapi_users/router/: oauth.py
tests/: test_db_sqlalchemy_asyncpg.py
