[tool.poetry]
name = "fastapi-users"
version = "0.1.0"
description = ""
authors = ["JeffreyThijs <jeffrey.thijs@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = ">=0.54.0,<0.62.0"
passlib = {extras = ["bcrypt"], version = "==1.7.4"}
email-validator = ">=1.1.0,<1.2"
sqlalchemy = ">=1.3.13,<1.4"
databases = ">=0.3.0,<0.5"
pyjwt = "==1.7.1"
python-multipart = "==0.0.5"
motor = ">=2.2.0,<3.0.0"
tortoise-orm = ">=0.15.18,<0.17.0"
makefun = ">=1.9.2,<1.10"

[tool.poetry.dev-dependencies]
flake8 = "*"
pytest = "*"
requests = "*"
isort = "*"
databases = {extras = ["sqlite"], version = "*"}
pytest-asyncio = "*"
flake8-docstrings = "*"
mkdocs = "*"
mkdocs-material = "*"
mypy = "*"
codecov = "*"
pytest-cov = "*"
pytest-mock = "*"
asynctest = "*"
flit = "*"
markdown-include = "*"
pygments = "*"
pymdown-extensions = "*"
bumpversion = "*"
httpx-oauth = "*"
httpx = "*"
asgi_lifespan = "*"
uvicorn = "*"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
